--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
 body {
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  background-color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+section{
+  max-width: 850px;
+  margin: 0 auto;
+  background-color: white;
+  height: 100%;
+  min-height: 100vh;
+  padding-top: 20px;
+}
+h1{
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin: 0;
+  padding-top: 16px;
+  font-size: 2em;
+}
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+@media (max-whidth: 600px) {
+  main{
+    flex-direction: column;
+  }
 }
