--- a/src/TodoItem/todoItems.css
+++ b/src/TodoItem/todoItems.css
@@ -10,8 +10,7 @@
 
 .Icon-delete-dvg{
     background-color: white;
-    border-radius: 50%;
-    width: 22px;
+    width: 16px;
 }
 
 .check-complete{
@@ -35,9 +34,9 @@ span.delete{
 
 }
 span.delete:hover .Icon-delete-dvg{
-    fill: rgb(197, 0, 0);
+    fill: rgb(34, 111, 255);
     cursor: pointer;
-    width: 21px;
+    width: 18px;
     background-color: rgb(230, 223, 223);
 }
 span.text{
@@ -45,6 +44,8 @@ span.text{
     margin: 10px;
     text-align: center;
     width: 80%;
+    max-height: 100px;
+    overflow: hidden;
 }
 span.text-complete {
     text-decoration: line-through;
@@ -55,6 +56,7 @@ li{
     display: flex;
     align-items: center;
     min-height: 40px;
+    max-height: 120px;
     border: 1px solid rgb(189, 189, 189);
     border-radius: 10px;
     margin: 10px;
@@ -62,5 +64,7 @@ li{
 }
 li:hover{
     background-color: rgb(243, 243, 243);
+}
+span.text:hover{
     cursor: pointer;
 }
