--- a/src/TodoList/todoList.css
+++ b/src/TodoList/todoList.css
@@ -1,7 +1,31 @@
 ul{
     list-style: none;
-    padding: 0;
+    padding: 20px;
+    padding-top: 0px;
     width: 50%;
     min-width: 300px;
     text-align: center;
+    max-height: 60vh;
+    overflow: scroll;
 }
+
+ul::-webkit-scrollbar {
+    width: 8px;
+    height: 0;
+}
+
+ul::-webkit-scrollbar-thumb {
+    background: rgb(64, 66, 88);
+    border-radius: 50px;
+
+}
+
+@media (max-width: 600px) {
+    ul{
+      width: 80%;
+      overflow: hidden;
+      max-height: none;
+    }
+  }
+
+
