--- a/src/TodoSearch/todoSearch.css
+++ b/src/TodoSearch/todoSearch.css
@@ -12,6 +12,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     margin: 1px;
+    cursor: pointer;
 }
 form.search{
     margin: 20px;
