--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
     monospace;
 }
 
-section{
+section.app{
   max-width: 850px;
   margin: 0 auto;
   background-color: white;
@@ -36,8 +36,4 @@ main {
   justify-content: space-around;
 }
 
-@media (max-whidth: 600px) {
-  main{
-    flex-direction: column;
-  }
-}
+
